--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
   background-attachment: fixed; 
 }
 .hero-image-3{
-filter: saturate();
-  height: 80vh;
+
+  height: 90vh;
   /* always scale the image to the appropriate size of your screen */
   background-size: cover;
   background-image: url(https://images6.alphacoders.com/110/1106343.jpg);
@@ -29,12 +29,24 @@ filter: saturate();
   background-attachment: fixed; 
 }
 
+ .glow{
+   background-color: rgb(255, 115, 115) ;
+   transition: ease-in-out .3s;
+   box-shadow:0 0 30px red;
+ }
 .over-spill{
   position: absolute;
   top: 80px;
   left: 625px;
 }
 
-@media screen AND (min-height:768px) {
-  
+.fs-custom{
+  font-size: 60px;
+}
+
+
+@media screen AND (max-height:768px) {
+  .mobile-hide{
+    display: none;
+  }
 }
