--- a/style.css
+++ b/style.css
@@ -3,9 +3,19 @@
 /* font-family: 'Roboto', sans-serif; */
 }
 
+.gray-scale:hover{
+  transform: scale(1.05);
+  filter: grayscale(100%);
+  transition: all 0.25s  ease-in;
+ 
+}
+
+.glow{
+  box-shadow: 0 4px 8px 0 rgba(243, 237, 237, 0.2), 0 6px 20px 0 rgba(250, 242, 242, 0.19);
+}
 .hero-image{
   
-  height: 60vh;
+  height: fit-content;
   /* always scale the image to the appropriate size of your screen */
   background-size: cover;
   background-image: url(https://images6.alphacoders.com/110/1106343.jpg);
@@ -79,3 +89,29 @@
   
 
  }
+
+
+ @keyframes animateHeart {
+  0% {
+    transform: scale(1.0);
+  }
+  5% {
+    transform: scale(1.0);
+  }
+  10% {
+    transform: scale(0.85);
+  }
+  15% {
+    transform: scale(0.85);
+  }
+  50% {
+    transform: scale(1.0);
+  }
+  100% {
+    transform: scale(1.);
+  }
+}
+.heart {
+  animation: animateHeart 1.2s infinite;
+}
+ 
