--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@
  
 }
 
-.glow{
-  box-shadow: 0 4px 8px 0 rgba(243, 237, 237, 0.2), 0 6px 20px 0 rgba(250, 242, 242, 0.19);
+.turkey-tail-card{
+  width: 18rem
 }
+
 .hero-image{
   
   height: fit-content;
@@ -35,7 +36,7 @@
 }
 .hero-image-3{
 
-  height: 90vh;
+  height: fit-content;
   /* always scale the image to the appropriate size of your screen */
   background-size: cover;
   background-image: url(https://images6.alphacoders.com/110/1106343.jpg);
@@ -56,7 +57,49 @@
 }
 
 
+.sm-hide {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  border: 0;
+}
+
+
+
+.glow:hover {
+  box-shadow: 0 0 10px 2px #fff, /* inner white */ 0 0 40px 1px #fcd867;
+  
+  transition: all 0.5s ease;
+}
+
+button:hover {
+  background-color: var(--primary-lighten);
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
+
+.icon:hover {
+  background-color: var(--primary-lighten);
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
+
+
+
+
+
+
+
+/* SECTION MEDIA QU */
 @media screen AND (max-width:768px) {
+
+  .turkey-tail-card{
+    width: 100vw;
+  }
   .mobile-hide{
     display: none;
   }
@@ -91,6 +134,41 @@
  }
 
 
+
+ /* SECTION Hero-Image Text */
+ @keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.bounce {
+  animation: bounceIn 2s;
+}
+
+/* SECTION FLOATING ACCORDIAN */
+@keyframes Float {
+  0%,
+  100% {
+    transform: translateY(-5px);
+  }
+  50% {
+    transform: translateY(5px) ;
+  }
+}
+
+.float {
+  animation: Float 2s infinite;
+}
+
+/* SECTION MUSHROOM ICON HEARTBEAT */
  @keyframes animateHeart {
   0% {
     transform: scale(1.0);
