--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   font-family: 'Oswald', sans-serif;
 /* font-family: 'Roboto', sans-serif; */
 }
+:root{
+  --primary:#fba41a;
+}
+.gold{
+  background-color: var(--primary);
+}
 
 .gray-scale:hover{
   transform: scale(1.05);
@@ -57,16 +63,6 @@
 }
 
 
-.sm-hide {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  border: 0;
-}
 
 
 
@@ -96,6 +92,19 @@ button:hover {
 
 /* SECTION MEDIA QU */
 @media screen AND (max-width:768px) {
+
+
+  .sm-hide {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    border: 0;
+  }
+  
 
   .turkey-tail-card{
     width: 100vw;
