--- a/style.css
+++ b/style.css
@@ -138,6 +138,21 @@ transition: 200ms ease-in-out;
 
 /* #endregion */
 
+.video-box{
+  position: relative;
+  width: 90vw;
+  height: 80vh;
+}
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .glow:hover {
   box-shadow: 0 0 10px 2px #fff, /* inner white */ 0 0 40px 1px #fcd867;
   
@@ -173,6 +188,14 @@ box-shadow: 0 0 20px 4px #ffce80
 
 /* SECTION MEDIA  */
 @media screen AND (max-width:768px) {
+
+  .video-box{
+  
+    width: 100vw;
+    height: 40vh;
+  }
+
+
   .content-sm{
     font-size: 20px;
     position: static;
@@ -293,6 +316,9 @@ box-shadow: 0 0 20px 4px #ffce80
   animation: animateHeart 1.2s infinite;
 }
 
+.heart-hover:hover{
+  animation: animateHeart 1.2s infinite;
+}
 
 /* #endregion */
 
